--- a/frontend/src/components/Button/buttonCTA.css
+++ b/frontend/src/components/Button/buttonCTA.css
@@ -51,3 +51,18 @@ Efeito de "pulsação" (aumenta e diminui de tamanho)
   animation: pulse 1.5s infinite ease-in-out;
 }
 
+
+/* 📌 Responsividade | Responsiveness */
+
+/* Very small (≤412px) */
+@media (max-width: 412px) { 
+  .cta-btn {
+    padding: 14px 26px;
+    font-size: 16px;
+    font-weight: bold;
+    border-radius: 8px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    transition: .3s;
+  }
+}
+
