--- a/frontend/src/pages/About/About.css
+++ b/frontend/src/pages/About/About.css
@@ -38,12 +38,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   margin: 0 auto;
   border-radius: 50%;
   background-color: var(--light-grey2);
   margin-bottom: 20px;
+  flex-shrink: 0;
 }
 .icon-container {
   border-top: 2px dashed var(--blue-vibrant);
@@ -234,4 +235,157 @@
   height: auto; 
   transform: rotate(100deg);
   max-width: 140px;
+}
+
+/* 📌 Responsividade | Responsiveness */
+
+/* Very small (≤412px) */
+@media (max-width: 412px) { 
+  .container-benefits {
+    padding-left: 4pt;
+    padding-right: 4pt;
+    text-align: center;
+  }
+
+  .benefits-cards {
+    flex-direction: column;
+    align-items: stretch;
+    gap: 12px;
+    margin-bottom: 30px;
+  }
+
+  .card-bfts {
+    display: grid;
+    border-radius: 12px;
+    align-items: self-start;
+    justify-content: left;
+    grid-template-columns: auto auto 2fr;
+    grid-template-rows: 1fr;
+    padding: 5px 15px;
+    width: 100%;
+    height: 95px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+  }
+  .card-bfts .icon-container {
+    width: 50px;
+    height: 50px;
+    background-color: var(--light-grey2);
+    display: flex;
+    flex-shrink: 0;
+    grid-row: 1;
+    align-items: center;
+    justify-content: center;
+    margin-top: 24px;
+    margin-right: 8pt;
+  }
+  .card-bfts h3 {
+    font-size: 1rem;
+    margin-top: 5px;
+    display: flex;
+  }
+  .card-bfts p {
+    text-align: start;
+    font-size: 0.85rem;
+    color: var(--grey);
+    display: flex;
+    flex-direction: row;
+    line-break: normal;
+    grid-column: 2;
+    margin-top: -45pt;
+  }
+  .card-content {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: center;
+    text-align: left;
+  }
+
+  .card-container {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    text-align: center;
+    align-items: center;
+    margin-top: 65px;
+    padding: 20px;
+  }
+  .card {
+    width: 90%;
+    height: 110px;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+    display: grid;
+    justify-content: space-between;
+    background-color: var(--white);
+    align-items: center;
+    text-align: center;
+    gap: 12px;
+    z-index: 13;
+  }
+  .card img {
+    display: none;    
+  }
+  .card-content {
+    padding: 1.2rem;
+    text-align: center;
+    justify-content: center;
+  }
+  .card-content h3 {
+    font-size: 1.2rem;
+    font-weight: bold;
+    letter-spacing: 0.5px;
+    margin-bottom: 10px;
+    text-align: left;
+    color: var(--dark-grey);
+  }
+  .card-content p {
+    font-weight: 400;
+    letter-spacing: 0.3px;
+    line-height: 1.6;
+    font-size: 0.9rem;
+    text-align: left;
+    align-items: center;
+    color: var(--grey);
+  }
+  .card-1, .card-3 {
+    height: auto;
+  }
+  .card-1 .card-content {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row-reverse;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+  }
+  .card-2 .card-content {
+    display: flex;
+    flex-wrap: wrap-reverse;
+    flex-direction: row-reverse;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+  }
+  .card-3 .card-content {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row-reverse;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .chalk-arrow-container {
+    position: relative;
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+  }
+  .chalk-arrow,
+  .chalk-arrow2,
+  .chalk-arrow3 {
+    opacity: 0.7;
+  }
 }
