--- a/frontend/src/pages/Contact/Contact.css
+++ b/frontend/src/pages/Contact/Contact.css
@@ -261,3 +261,18 @@ input {
   color: #f44336;
   font-size: 16px;
 }
+
+/* 📌 Responsividade | Responsiveness */
+
+/* Very small (≤412px) */
+@media (max-width: 412px) { 
+  .container-contacts {
+    padding-left: 4pt;
+    padding-right: 4pt;
+  }
+  .technical-support-txt,
+  .suggestions-feedback-txt,
+  .report-problem-txt, .support-txt {
+    display: none;
+  }
+}
