--- a/frontend/src/components/Button/buttonConvert.css
+++ b/frontend/src/components/Button/buttonConvert.css
@@ -185,6 +185,10 @@
   font-weight: bold;
 }
 
+.converting-word {
+  font-size: 9px;
+}
+
 /* 📌 Responsividade | Responsiveness */
 
 /* Widescreen (992px e acima) */
@@ -341,6 +345,93 @@
     border-radius: 25px;
     color: var(--dark-grey);
     border: 2px solid #999999;
+  }
+}
+
+/* Small (≤430px) */
+@media (max-width: 430px) { 
+  .container-box {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    gap: 10px;
+  }
+  .link-box::placeholder {
+    color: var(--grey);
+    opacity: 0.9;
+    font-size: 0.79em;
+    font-weight: 500;
+    width: 282%;
+  }
+  #input-link {
+    display: block;
+    width: 100%;
+    max-width: 100%;
+    min-width: 50px;
+    flex-grow: 1;
+  }
+  #input-link.link-box {
+    display: flex;
+    width: 100%;
+    max-width: 100%;
+    min-width: 40px;
+    padding: 20px;
+    flex-grow: 1;
+  }
+  .bnt {
+    margin-top: 59px;
+    transform: none;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    right: 80px;
+    padding: 12px 26px;
+    border-radius: 25px;
+    background-color: var(--blue-vibrant);
+    border: 2px solid var(--blue-vibrant);
+    box-sizing: border-box;
+    cursor: pointer;
+    height: 50px;
+    width: 50%;
+    font-size: 16px;
+    letter-spacing: 0.19em;
+    line-height: 1.2;
+    font-weight: bold;
+    color: var(--white);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.12);
+    transition: .3s;
+    z-index: 2;
+    flex-direction: column;
+
+  }
+  .bnt:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+    height: 50.5px;
+    width: 45%;
+    border-radius: 25px;
+    color: var(--dark-grey);
+    border: 2px solid #999999;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+  .convert-next-btn {
+    background-color: #ccc;
+    color: var(--black);
+    border: 1px solid #ccc;
+    padding: 5px 15px;
+    font-size: 14px;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: .3s;
+  }
+  .converting-word {
+    font-size: 9px;
+    text-align: center;
+    align-items: center;
+    display: flex;
+    justify-content: center;
   }
 }
 
