--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -124,21 +124,23 @@ h1 {
 }
 
 /* Narrow (600px - 767px) */
-@media (max-width: 767px) { 
+@media (max-width: 768px) { 
   .home-section {
     padding-left: var(--space-m);
     padding-right: var(--space-m);
+    flex-direction: column;
+    align-items: center;
   }
   h1 {
     font-weight: 400;
     line-break: loose;
-    font-size: 21px;
+    font-size: 23px;
   }
   .home-tilte1, .home-tilte2 {
-    font-size: 24px;
+    font-size: 27px;
   }
   .subtitle {
-    font-size: 18px;
+    font-size: 20px;
   }
   .impact-phrase {
     font-size: 16px;
@@ -147,7 +149,7 @@ h1 {
     color: #6C757D;
     font-style: italic;
     text-align: center;
-    margin-top: 20px;
+    margin-top: -90px;
   }
 }
 
@@ -172,6 +174,22 @@ h1 {
     font-size: 14px;
     text-align: center;
     margin-top: 10px;
+  }
+}
+
+/* Small (≤430px) */
+@media (max-width: 430px) { 
+  .home-section {
+    padding-left: 4pt;
+    padding-right: 4pt;
+    flex-direction: column;
+    align-items: center;
+  }
+  .home-tilte1, .home-tilte2 {
+    font-size: 26px;
+  }
+  .subtitle {
+    font-size: 16px;
   }
 }
 
