--- a/frontend/src/assets/styles/global.css
+++ b/frontend/src/assets/styles/global.css
@@ -12,6 +12,7 @@
   --light-blue-grey2: #f5f6fa;
   --white: #FFFFFF;
   --black: #0A0F1E;
+  --border-color:#7c7c7c; 
 
   /* Espaçamentos 
   Spacing
