--- a/frontend/src/pages/Authentication/AuthLayout..css
+++ b/frontend/src/pages/Authentication/AuthLayout..css
@@ -1,3 +1,5 @@
+@import "../../assets/styles/global.css";
+
 .container-auth-layout {
   display: flex;
   width: 100vw;
@@ -23,15 +25,87 @@
   left: 0;
   object-fit: cover;
 }
+
+.overlay-box h3 {
+  font-size: 1.5rem;
+  font-weight: 700;
+}
 .overlay-box {
   position: absolute;
   top: 30px;
   left: 50%;
   transform: translateX(-120%);
   width: 30%;
-  height: 90%;  
+  height: 90%;
   background-color: var(--white);
   box-shadow: 0 2px 50px rgba(0, 0, 0, 0.3);
   border-top: 4px solid var(--blue-vibrant);
-  padding: 20px 20px;
+  padding: 40px 40px;
+}
+.overlay-content {
+  display: grid;
+  border-radius: 8px;
+  margin-top: 24px;
+  padding: 0px 0px 8px;
+}
+.overlay-content p {
+  padding: 0px 0px 8px;
+  font-size: 0.875rem;
+  font-weight: 700;
+  margin: 0px;
+}
+.overlay-content-login-username,
+.overlay-content-login-password {
+  padding: 0px 0px 16px;
+}
+.overlay-content-login-username input {
+  appearance: none;
+  background-image: none;
+  border: 1px solid var(--border-color, #818181);;
+  border-radius: 4px 4px;
+  display: block;
+  inline-size: 100%;
+  box-sizing: border-box;
+  padding: 12px;
+  box-shadow: inset 0 0 0 1px var(--border-color, #818181);
+  background-color: transparent;
+  height: 48px;
+}
+.overlay-content-login-password input {
+  appearance: none;
+  background-image: none;
+  border: 1px solid var(--border-color, #818181);
+  border-radius: 4px 4px;
+  display: block;
+  inline-size: 100%;
+  box-sizing: border-box;
+  padding: 12px;
+  box-shadow: inset 0 0 0 1px var(--border-color, #818181);
+  background-color: transparent;
+  height: 48px;
+}
+.overlay-content .overlay-content-login-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.overlay-content-login-button button {
+  display: flex;
+  position: relative;
+  box-sizing: border-box;
+  border-radius: 9999px;
+  background-color: var(--blue-vibrant, #3d55cc);
+  padding: 8px 32px;
+  inline-size: 100%;
+  font-weight: 700;
+  font-size: 1rem;
+  height: 48px;
+  font-size: inherit;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  color: var(--white);
+  box-shadow: inset 0 0 0 1px var(--blue-vibrant, #3d55cc);
+  border: 1px solid var(--blue-vibrant, #3d55cc);
+  cursor: pointer;
 }
