--- a/frontend/src/pages/Authentication/AuthLayout..css
+++ b/frontend/src/pages/Authentication/AuthLayout..css
@@ -62,10 +62,14 @@
   font-weight: 600;
   margin: 0px;
   color: var(--black);
+  letter-spacing: 0.3px;
+  line-height: 1.2;
 }
 .overlay-content-login-username,
 .overlay-content-login-password {
-  padding: 0px 0px 16px;
+  padding-bottom: 16px;
+  position: relative;
+  
 }
 .overlay-content-login-username input,
 .overlay-content-login-password input {
@@ -76,18 +80,41 @@
   display: block;
   inline-size: 100%;
   box-sizing: border-box;
-  padding: 12px;
+  padding: 14px 14.5px;
   box-shadow: inset 0 0 0 1px var(--border-color, #4A4A4A);
   background-color: transparent;
   height: 48px;
-  transition: border-color .3s ease-in-out;
-}
-.overlay-content-login-username input:focus,
-.overlay-content-login-password input:focus {
-  border-color: #3d55cc;
+  transition: all .3s ease-in-out;
   outline: none;
-  box-shadow: 0 0 5px rgba(61, 85, 204, 0.5);
-  border: 2px solid var(--blue-vibrant, #3d55cc);
+}
+.overlay-content-login-username label,
+.overlay-content-login-password label {
+  position: absolute;
+  left: 12px;
+  top: 35%;
+  transform: translateY(-50%);
+  background: var(--white);
+  padding: 0 5px;
+  color: #999;
+  font-size: 16px;
+  transition: all .3s ease-in-out;
+  pointer-events: none;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+/* Quando o input está focado ou preenchido, move o label para cima
+When the input is focused or filled, move the label upwards
+*/
+.overlay-content-login-username input:focus + label,
+.overlay-content-login-username input:not(:placeholder-shown) + label,
+.overlay-content-login-password input:focus + label,
+.overlay-content-login-password input:not(:placeholder-shown) + label {
+  color: #3d55cc;
+  outline: none;
+  top: 0;
+  left: 10px;
+  font-size: 12px;
 }
 .overlay-content .overlay-content-login-button {
   display: flex;
@@ -104,7 +131,7 @@
   inline-size: 100%;
   font-weight: 700;
   font-size: 1rem;
-  height: 48px;
+  height: 45px;
   font-size: inherit;
   text-align: center;
   align-items: center;
@@ -113,10 +140,19 @@
   box-shadow: inset 0 0 0 1px var(--blue-vibrant, #3d55cc);
   border: 1px solid var(--blue-vibrant, #3d55cc);
   cursor: pointer;
+  letter-spacing: 0.5px;
+  line-height: 1.2;
 }
 .overlay-content-login-button button:hover {
   background-color: #2e44b0;
   border-color: #2e44b0;
+}
+.overlay-content-forgot-pass {
+  display: flex;
+  text-align: center;
+  align-items: center;justify-content: center;
+  margin-top: 10px;
+  font-size: 13px;
 }
 
 .overlay-content-divider {
@@ -141,23 +177,52 @@
   align-items: center;
   justify-content: center;
   inline-size: 100%;
-  height: 48px;
+  height: 42px;
   margin-bottom: 8px;
-  border-radius: 4px;
+  border-radius: 8px;
   border: 1px solid #ccc;
-  background-color: var(--white);
   font-weight: bold;
   cursor: pointer;
+  margin-bottom: 10px;
 }
-.login-api.spotify {
-  border-color: #1DB954;
-  color: #1DB954;
+.spotify {
+  background-color: #1DB954;
+  color: var(--white);
+  border: 1px solid #1DB954;
+  font-weight: bold;
+  letter-spacing: 0.5px;
+  line-height: 1.2;
 }
-.login-api.deezer {
-  border-color: #FF0000;
-  color: #FF0000;
+.deezer {
+  background-color: #A238FF;
+  color: var(--white);
+  border: 1px solid #A238FF;
+  font-weight: bold;
+  letter-spacing: 0.5px;
+  line-height: 1.2;
 }
-.login-api.google {
-  border-color: #4285F4;
-  color: #4285F4;
+.google {
+  background-color: var(--white);
+  color: var(--black);
+  border: 1px solid var(--white);
+  font-weight: bold;
+  letter-spacing: 0.5px;
+  line-height: 1.2;
 }
+
+.overlay-content-register {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-top: 16px;
+} 
+.overlay-content-register p {
+  font-size: 16px;
+  font-weight: 400;
+} 
+.overlay-content-register a {
+  font-weight: 700;
+  margin-top: 16px;
+  color: var(--blue-vibrant);
+} 
