--- a/frontend/src/pages/Authentication/AuthLayout..css
+++ b/frontend/src/pages/Authentication/AuthLayout..css
@@ -26,12 +26,19 @@
   object-fit: cover;
 }
 
+.overlay-box img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 26px;
+  height: 26px;
+}
 .overlay-box h3 {
   font-size: 1.5rem;
   font-weight: 700;
   text-align: center;
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
-  margin-bottom: 16px;
+  margin-bottom: 32px;
 }
 .overlay-box h3 span {
   font-weight: 800;
@@ -96,7 +103,7 @@
   background: var(--white);
   padding: 0 5px;
   color: #999;
-  font-size: 16px;
+  font-size: 14px;
   transition: all .3s ease-in-out;
   pointer-events: none;
   display: flex;
@@ -152,7 +159,14 @@ When the input is focused or filled, move the label upwards
   text-align: center;
   align-items: center;justify-content: center;
   margin-top: 10px;
-  font-size: 13px;
+  margin-bottom: 5px;
+  font-size: 14px;
+  color: #2e44b0;
+  cursor: pointer;
+}
+.overlay-content-forgot-pass:hover {
+  text-decoration: underline;
+  color: var(--blue-vibrant);
 }
 
 .overlay-content-divider {
@@ -162,6 +176,8 @@ When the input is focused or filled, move the label upwards
   color: #4A4A4A;
   font-size: 0.875rem;
   margin: 16px 0;
+  font-weight: 600;
+  
 }
 
 .overlay-content-divider::before,
@@ -181,7 +197,7 @@ When the input is focused or filled, move the label upwards
   margin-bottom: 8px;
   border-radius: 8px;
   border: 1px solid #ccc;
-  font-weight: bold;
+  font-weight: 500;
   cursor: pointer;
   margin-bottom: 10px;
 }
@@ -189,7 +205,7 @@ When the input is focused or filled, move the label upwards
   background-color: #1DB954;
   color: var(--white);
   border: 1px solid #1DB954;
-  font-weight: bold;
+  font-weight: 500;
   letter-spacing: 0.5px;
   line-height: 1.2;
 }
@@ -197,17 +213,36 @@ When the input is focused or filled, move the label upwards
   background-color: #A238FF;
   color: var(--white);
   border: 1px solid #A238FF;
-  font-weight: bold;
+  font-weight: 500;
   letter-spacing: 0.5px;
   line-height: 1.2;
 }
 .google {
   background-color: var(--white);
-  color: var(--black);
-  border: 1px solid var(--white);
-  font-weight: bold;
+  color: #333;
+  border: 1px solid #d3d3d3;
+  font-weight: 500;
   letter-spacing: 0.5px;
   line-height: 1.2;
+}
+.spotify:hover {
+  background-color: #1aa34a;
+  box-shadow: 0 4px 10px rgba(29, 185, 84, 0.3);
+  transform: translateY(-2px);
+  transition: all .3s ease;
+}
+.deezer:hover  {
+  background-color: #a54cf2;
+  box-shadow: 0 4px 10px rgba(163, 69, 242, 0.3);
+  transform: translateY(-2px);
+  transition: all .3s ease;
+}
+.google:hover  {
+  background-color: rgba(230, 230, 230, 0.8);
+  border-color: #bdbdbd;
+  box-shadow: 0 4px 10px rgba(189, 189, 189, 0.3);
+  transform: translateY(-2px);
+  transition: all .3s ease;
 }
 
 .overlay-content-register {
@@ -218,11 +253,16 @@ When the input is focused or filled, move the label upwards
   margin-top: 16px;
 } 
 .overlay-content-register p {
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 400;
 } 
 .overlay-content-register a {
   font-weight: 700;
   margin-top: 16px;
-  color: var(--blue-vibrant);
+  color: #2e44b0;
+  cursor: pointer;
 } 
+.overlay-content-register a:hover {
+  text-decoration: underline;
+  color: var(--blue-vibrant);
+}
