--- a/frontend/src/pages/Authentication/ForgotPass/ForgotPassword.css
+++ b/frontend/src/pages/Authentication/ForgotPass/ForgotPassword.css
@@ -157,7 +157,7 @@ When the input is focused or filled, move the label upwards
 }
 .overlay-content-forgotpass-button button:hover {
   background-color: #2e44b0;
-  border-color: #2e44b0;
+  box-shadow: 0 0 10px rgba(61, 85, 204, 0.5);
 }
 .overlay-content-forgot-pass:hover {
   text-decoration: underline;
@@ -167,20 +167,21 @@ When the input is focused or filled, move the label upwards
 .overlay-forgotpass-content-divider {
   display: flex;
   align-items: center;
-  justify-content: center;
-  color: #4A4A4A;
-  font-size: 0.875rem;
-  margin: 16px 0;
-  font-weight: 600;
-  
+  text-align: center;
+  margin: 20px 0;
+  margin-top: 50px;
 }
 .overlay-forgotpass-content-divider::before,
 .overlay-forgotpass-content-divider::after {
   content: "";
   flex: 1;
-  height: 1px;
-  background: #ddd;
-  margin: 0 8px;
+  border-bottom: 1px solid #ccc;
+}
+.overlay-forgotpass-content-divider span {
+  padding: 0 10px;
+  color: #555;
+  font-size: 0.9rem;
+  font-weight: 600;
 }
 
 .overlay-forgotpass-content-register {
