--- a/frontend/src/pages/Authentication/Login/SignInLayout.css
+++ b/frontend/src/pages/Authentication/Login/SignInLayout.css
@@ -163,7 +163,7 @@ When the input is focused or filled, move the label upwards
 }
 .overlay-content-login-button button:hover {
   background-color: #2e44b0;
-  border-color: #2e44b0;
+  box-shadow: 0 0 10px rgba(61, 85, 204, 0.5);
 }
 .overlay-content-forgot-pass a {
   display: flex;
