--- a/frontend/src/pages/Authentication/Register/SignUpLayout.css
+++ b/frontend/src/pages/Authentication/Register/SignUpLayout.css
@@ -157,7 +157,7 @@ When the input is focused or filled, move the label upwards
 }
 .overlay-content-signup-button button:hover {
   background-color: #2e44b0;
-  border-color: #2e44b0;
+  box-shadow: 0 0 10px rgba(61, 85, 204, 0.5);
 }
 .overlay-content-forgot-pass:hover {
   text-decoration: underline;
