--- a/frontend/src/pages/Authentication/Login/SignInLayout.css
+++ b/frontend/src/pages/Authentication/Login/SignInLayout.css
@@ -326,3 +326,9 @@ When the input is focused or filled, move the label upwards
   text-decoration: underline;
   color: var(--blue-vibrant);
 }
+
+.error-message-user {
+color: #ef4444;
+font-size: 14px;
+margin-top: 8px;
+}
