Refactor authentication context to improve user session handling and update local storage management; enhance UI with user full name display and style adjustments.

--- a/frontend/src/assets/styles/global.css
+++ b/frontend/src/assets/styles/global.css
@@ -2,7 +2,7 @@
 
 :root {
   /* Paleta de cores
-  Colour palette
+  Colour palette Blueforce
   */
   --blue-vibrant: #3d55cc;
   --dark-grey: #141a33;
