--- a/frontend/src/pages/Authentication/VerifyCode/VerifyCode.css
+++ b/frontend/src/pages/Authentication/VerifyCode/VerifyCode.css
@@ -1,6 +1,6 @@
 @import "../../../assets/styles/global.css";
 
-.container-verify-layout{
+.container-verify-layout {
   display: flex;
   width: 100vw;
   height: 100vh;
@@ -12,7 +12,7 @@
   justify-content: center;
   align-items: center;
 }
-.right-forgotverifypass-section {
+.right-verify-section {
   position: relative;
   flex: 0.7;
   background-color: #0a4a6b;
