--- a/frontend/src/pages/Authentication/Login/SignInLayout.css
+++ b/frontend/src/pages/Authentication/Login/SignInLayout.css
@@ -1,301 +1,5 @@
-@import "../../../assets/styles/global.css";
+@import "tailwindcss";
 
-.container-auth-layout {
-  display: flex;
-  width: 100vw;
-  height: 100vh;
-}
-.left-section {
-  display: flex;
-  flex: 0.3;
-  background-color: var(--white);
-  justify-content: center;
-  align-items: center;
-}
-.right-section {
-  position: relative;
-  flex: 0.7;
-  background-color: #0a4a6b;
-}
-.right-section .auth-layout-image {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  left: 0;
-  object-fit: cover;
-}
-.toggle-fixed-bg {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  background-color: rgba(0, 0, 0, 0.5);
-  color: var(--white);
-  border: none;
-  border-radius: 6px;
-  cursor: pointer;
-  z-index: 20;
-  transition: opacity .3s ease-in-out;
-}
-.toggle-fixed-bg {
-  opacity: 0;
-}
-.right-section:hover .toggle-fixed-bg {
-  opacity: 1;
-}
-
-.overlay-box img {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 26px;
-  height: 26px;
-}
-.overlay-box h3 {
-  font-size: 1.5rem;
-  font-weight: 700;
-  text-align: center;
-  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
-  margin-bottom: 32px;
-}
-.overlay-box h3 span {
-  font-weight: 800;
-  color: var(--blue-vibrant, #3d55cc);
-}
-.overlay-box {
-  position: absolute;
-  top: 30px;
-  left: 50%;
-  transform: translateX(-120%);
-  width: 30%;
-  height: 90%;
-  background-color: var(--white);
-  box-shadow: 0 2px 50px rgba(0, 0, 0, 0.3);
-  border-top: 4px solid var(--blue-vibrant);
-  padding: 40px 40px;
-  border-radius: 10px;
-}
-.overlay-content {
-  display: grid;
-  border-radius: 8px;
-  margin-top: 24px;
-  padding: 0px 0px 8px;
-}
-.overlay-content p {
-  padding: 0px 0px 8px;
-  font-size: 0.9rem;
-  font-weight: 600;
-  margin: 0px;
-  color: var(--black);
-  letter-spacing: 0.3px;
-  line-height: 1.6;
-}
-.overlay-content-login-username {
-  padding-bottom: 16px;
-  position: relative;
-  
-}
-.overlay-content-login-username input {
-  appearance: none;
-  background-image: none;
-  border: 1px solid var(--border-color, #4A4A4A);
-  border-radius: 6px;
-  display: block;
-  inline-size: 100%;
-  box-sizing: border-box;
-  padding: 14px 14.5px;
-  box-shadow: inset 0 0 0 1px var(--border-color, #4A4A4A);
-  background-color: transparent;
-  height: 48px;
-  transition: border-color .3s ease-in-out, box-shadow .3s ease-in-out;
-  outline: none;
-}
-.overlay-content-login-username label {
-  position: absolute;
-  left: 12px;
-  top: 35%;
-  transform: translateY(-50%);
-  background: var(--white);
-  padding: 0 5px;
-  color: #999;
-  font-size: 14px;
-  transition: all .3s ease-in-out;
-  pointer-events: none;
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  transition: all .3s ease-in-out;
-}
-/* Quando o input está focado ou preenchido, move o label para cima
-When the input is focused or filled, move the label upwards
-*/
-.overlay-content-login-username input:focus + label,
-.overlay-content-login-username input:not(:placeholder-shown) + label {
-  color: #3d55cc;
-  outline: none;
-  top: 0;
-  left: 10px;
-  font-size: 12px;
-}
-
-.overlay-content-login-username input:hover {
- border-color: rgba(61, 85, 204, 0.8);
-}
-
-.overlay-content .overlay-content-login-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.overlay-content-login-button button {
-  display: flex;
-  position: relative;
-  box-sizing: border-box;
-  border-radius: 9999px;
-  background-color: var(--blue-vibrant, #3d55cc);
-  padding: 8px 32px;
-  inline-size: 100%;
-  font-weight: 700;
-  font-size: 1rem;
-  height: 45px;
-  font-size: inherit;
-  text-align: center;
-  align-items: center;
-  justify-content: center;
-  color: var(--white);
-  box-shadow: inset 0 0 0 1px var(--blue-vibrant, #3d55cc);
-  border: 1px solid var(--blue-vibrant, #3d55cc);
-  cursor: pointer;
-  letter-spacing: 0.5px;
-  line-height: 1.2;
-}
-.overlay-content-login-button button:hover {
-  background-color: #2e44b0;
-  box-shadow: 0 0 10px rgba(61, 85, 204, 0.5);
-}
-.disabled-btn {
-  opacity: 0.6;
-  cursor: not-allowed;
-  box-shadow: none !important;
-  background-color: var(--blue-vibrant) !important;
-  transition: opacity .3s ease-in-out;
-}
-.overlay-content-forgot-pass a {
-  display: flex;
-  text-align: center;
-  align-items: center;justify-content: center;
-  margin-top: 10px;
-  margin-bottom: 5px;
-  font-size: 14px;
-  color: #2e44b0;
-  cursor: pointer;
-  text-decoration: none;
-}
-.overlay-content-forgot-pass a:hover {
-  text-decoration: underline;
-  color: var(--blue-vibrant);
-}
-
-.overlay-content-divider {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #4A4A4A;
-  font-size: 0.875rem;
-  margin: 16px 0;
-  font-weight: 600;
-  
-}
-
-.overlay-content-divider::before,
-.overlay-content-divider::after {
-  content: "";
-  flex: 1;
-  height: 1px;
-  background: #ddd;
-  margin: 0 8px;
-}
-.overlay-content-login-api button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  inline-size: 100%;
-  height: 42px;
-  margin-bottom: 8px;
-  border-radius: 8px;
-  border: 1px solid #ccc;
-  font-weight: 500;
-  cursor: pointer;
-  margin-bottom: 10px;
-}
-.spotify {
-  background-color: #1DB954;
-  color: var(--white);
-  border: 1px solid #1DB954;
-  font-weight: 500;
-  letter-spacing: 0.5px;
-  line-height: 1.2;
-}
-.deezer {
-  background-color: #A238FF;
-  color: var(--white);
-  border: 1px solid #A238FF;
-  font-weight: 500;
-  letter-spacing: 0.5px;
-  line-height: 1.2;
-}
-.google {
-  background-color: var(--white);
-  color: #333;
-  border: 1px solid #d3d3d3;
-  font-weight: 500;
-  letter-spacing: 0.5px;
-  line-height: 1.2;
-}
-.spotify:hover {
-  background-color: #1aa34a;
-  box-shadow: 0 4px 10px rgba(29, 185, 84, 0.3);
-  transform: translateY(-2px);
-  transition: all .3s ease;
-}
-.deezer:hover  {
-  background-color: #a54cf2;
-  box-shadow: 0 4px 10px rgba(163, 69, 242, 0.3);
-  transform: translateY(-2px);
-  transition: all .3s ease;
-}
-.google:hover  {
-  background-color: rgba(230, 230, 230, 0.8);
-  border-color: #bdbdbd;
-  box-shadow: 0 4px 10px rgba(189, 189, 189, 0.3);
-  transform: translateY(-2px);
-  transition: all .3s ease;
-}
-
-.overlay-content-register {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  margin-top: 16px;
-} 
-.overlay-content-register p {
-  font-size: 14px;
-  font-weight: 400;
-} 
-.overlay-content-register a {
-  font-weight: 700;
-  margin-top: 16px;
-  color: #2e44b0;
-  cursor: pointer;
-} 
-.overlay-content-register a:hover {
-  text-decoration: underline;
-  color: var(--blue-vibrant);
-}
-
-.error-message-user {
-  color: #ef4444;
-  font-size: 14px;
-  margin-top: 8px;
+@theme {
+  /* ... */
 }
